# multiagent_testbed

./: README.md  positionbased_target.py
image_detection/: README.md  package.xml  setup.py
image_detection/config/: config.yaml
image_detection/image_detection/: camera_bearing.py  positionbased_target.py  webcam_aruco_bearing.py
pose_fusion/: CMakeLists.txt  package.xml  requirements.txt  rosdep.yaml
pose_fusion/config/: camera_info.yaml  config.rviz
pose_fusion/launch/: fusion_example.launch.py
pose_fusion/pose_fusion/: circle_estimate.py  conversion.py  fusion.py  spatial.py  test_circle_estimate.py  utils.py
pose_fusion/scripts/: fake_pose_publisher.py  fake_pose_synthesizer.py  gps_fusion.py  offline_fusion.py  pose_fusion_example.py
relative_position_msg/: CMakeLists.txt  package.xml
relative_position_msg/msg/: RelativeMeasurement.msg  RelativeNeighbors.msg
turtlesim_vicon/: package.xml  setup.cfg  setup.py
turtlesim_vicon/config/: config_robohub.yaml  config_sim.yaml
turtlesim_vicon/launch/: multiagent.launch.py  multiagent_vicon_pipe.launch.py
turtlesim_vicon/turtlesim_vicon/: relative_position_bearing_emulator.py  relative_position_emulator.py  turtle2posestamped.py
vicon2pose/: CMakeLists.txt  package.xml
vicon2pose/config/: calibration_info.yaml
vicon2pose/launch/: initial_pose_calibration.launch.py  pose_publisher.launch.py  spin_calibration.launch.py  vicon_emulator.launch.py
vicon2pose/scripts/: dummy_script.py  pose2odom.py  pose_calibration_node.py  spin_calibration_node.py  vicon2pose_node.py  vicon_emulator.py
vicon2pose/src/: cpp_node.cpp
vicon_calibration_interfaces/: CMakeLists.txt  package.xml
vicon_calibration_interfaces/srv/: AssignTopic.srv
virtual_safety_net/: CMakeLists.txt  package.xml
virtual_safety_net/config/: agents.yaml  boundary.yaml  boundary_backup.yaml
(+7 files in other folders)
