<?xml version="1.0"?>
<package format="3">
  <name>relative_position_msg</name>
  <version>0.0.1</version>
  <description>Custom messages for relative neighbor measurements.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- This line is REQUIRED for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time deps for generating interfaces -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Run-time deps for using generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
